# elliptic-curve-differential-fuzzer

./: CMakeLists.txt  README.md  fail.c  fuzz_ec.c  fuzz_ec.dict  fuzz_ec.h  gencorp.py  libecc.c  main.c  mbedtls.c
corpus/: brainpoolP256r1000  brainpoolP256r1001  brainpoolP256r101  brainpoolP256r1010  brainpoolP256r1011  brainpoolP256r1020  brainpoolP256r1021  brainpoolP256r1030  brainpoolP256r1031  brainpoolP256r1100  brainpoolP256r1101  brainpoolP256r1110  brainpoolP256r1111  brainpoolP256r1120  brainpoolP256r1121  brainpoolP256r1130  brainpoolP256r1131  brainpoolP256r1200  brainpoolP256r1201  brainpoolP256r1210  brainpoolP256r1211  brainpoolP256r1220  brainpoolP256r1221  brainpoolP256r123  brainpoolP256r1230  brainpoolP256r1231  brainpoolP256r1300  brainpoolP256r1301  brainpoolP256r1310  brainpoolP256r1311  brainpoolP256r1320  brainpoolP256r1321  brainpoolP256r1330  brainpoolP256r1331  brainpoolP256r1minus  brainpoolP256r1minus0  brainpoolP256r1minus1  brainpoolP256r1minus2  brainpoolP256r1minus3  brainpoolP256r1minus4  (+575 more)
modules/: botan.cpp  cryptopp.cpp  ecadd.js  ecinit.js  ecmult.js  elliptic.go  elliptic.js  gcrypt.c  golang.c  libecc.c  mbedtls.c  nettle.c  nss.c  openssl.c  rust.c  script.c
modules/rustlibsecp256k1/: Cargo.toml
modules/rustlibsecp256k1/src/: lib.rs
