[package]
name = "ecc-diff-fuzzer-rs"
version = "0.1.0"
authors = ["Philippe Antoine <contact@catenacyber.fr>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsecp256k1 = "0.3.5"
